[metadata]
NAME = mead-audio8
version = 0.0.6
description = MEAD Audio
author = dpressel
author_email = dpressel@gmail.com
license = Apache 2.0
keywords=
    deep-learning
    audio
    pytorch
long_description_content_type = text/markdown
long_description = file: README.md
license_files =
    ../LICENSE
    ../NOTICE
classifiers = 
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
scripts =
    audio8/train.py
    audio8/pretrain.py
    audio8/test.py
    audio8/pretrain_paired.py
install_requires =
    numpy
    editdistance
    mead-baseline
    six
    soundfile

[options.extras_require]
test:
    pytest
    mock
    contextdecorator
    pytest-forked
scipy: scipy
ctcdecode: ctcdecode

